--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -23,7 +23,7 @@ params:
   # For more date formats see https://gohugo.io/functions/format/
   dateFormat: Jan 2, 2006
   codePenUser: someUser
-  katex: true
+  math: katex
 
 menu:
   nav:
